// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmSessionWelcome with accounts has the expected html structure 1`] = `
<div
  class="tm-session"
  id="session-welcome"
>
  <div
    class="tm-session-container"
  >
    <div
      class="tm-session-header"
    >
      <div
        class="tm-session-title"
      >
        
        Sign in to Lunie
      
      </div>
       
      <a>
        <i
          class="material-icons"
        >
          close
        </i>
      </a>
    </div>
     
    <div
      class="tm-session-main"
    >
      <lisession-stub
        disabled="true"
        icon="usb"
        subtitle=""
        title="Sign in with Ledger Nano"
      >
        <!---->
         
        <div>
          
          Please use Chrome, Opera, or Brave. Ledger is not supported in your
          current browser.
        
        </div>
      </lisession-stub>
       
      <lisession-stub
        icon="search"
        id="explore-address"
        subtitle="If you want to use Lunie with an address
          , choose this option."
        title="Sign in with Address"
      />
       
      <!---->
       
      <div
        class="danger-zone"
      >
        <div
          class="header"
        >
          <h1>
            DANGER ZONE
          </h1>
           
          <p>
            
              Never use accounts created in the browser on a real network. You
              could lose all your money.
            
          </p>
        </div>
         
        <lisession-stub
          icon="lock"
          id="sign-in-with-account"
          subtitle="If you have an account, choose this option."
          title="Sign in with password"
        />
         
        <lisession-stub
          icon="person_add"
          subtitle="Generate a brand new seed and create a new account."
          title="Create new account"
        />
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`TmSessionWelcome without accounts has the expected html structure 1`] = `
<div
  class="tm-session"
  id="session-welcome"
>
  <div
    class="tm-session-container"
  >
    <div
      class="tm-session-header"
    >
      <div
        class="tm-session-title"
      >
        
        Sign in to Lunie
      
      </div>
       
      <a>
        <i
          class="material-icons"
        >
          close
        </i>
      </a>
    </div>
     
    <div
      class="tm-session-main"
    >
      <lisession-stub
        disabled="true"
        icon="usb"
        subtitle=""
        title="Sign in with Ledger Nano"
      >
        <!---->
         
        <div>
          
          Please use Chrome, Opera, or Brave. Ledger is not supported in your
          current browser.
        
        </div>
      </lisession-stub>
       
      <lisession-stub
        icon="search"
        id="explore-address"
        subtitle="If you want to use Lunie with an address
          , choose this option."
        title="Sign in with Address"
      />
       
      <!---->
       
      <div
        class="danger-zone"
      >
        <div
          class="header"
        >
          <h1>
            DANGER ZONE
          </h1>
           
          <p>
            
              Never use accounts created in the browser on a real network. You
              could lose all your money.
            
          </p>
        </div>
         
        <!---->
         
        <lisession-stub
          icon="person_add"
          subtitle="Generate a brand new seed and create a new account."
          title="Create new account"
        />
         
        <lisession-stub
          icon="settings_backup_restore"
          id="import-seed"
          subtitle="Use an existing seed phrase to create an account."
          title="Import with seed"
        />
      </div>
    </div>
  </div>
</div>
`;
